# ubuntu

./: README.md  Untitled Diagram.drawio  bottleplacing.cpp  bottleplacing_delay.cpp  bottleplacingtasktime.cpp  franka_ziyu.usd  panda_ais.py  ziyusensor20240830.stl
Arduinodigitalread/: digitalread.ino
BigListplot/: CSClient.csproj  Program.cs
BigListplot2/: CSClient.csproj  Program.cs  delays_with_timestamps.csv  delaysupanddown1000.csv
BigListplot3/: Program.cs  delaysUPandDown100.csv  delays_with_timestamps.csv
CSCMQTTIssacSim/: Program_UploadMqttdata.cs
CSCUploadandDownload0722/: Program.cs
CSClient/: Program.cs
CSClient_Omniverse/: Program.cs
CSClient_Omniversedelay/: ForwardHelper.cs  Program.cs
CSClientdelay/: CSClient.sln  Program.cs
CSClientnew/: Program.cs
CSClientnewUploadandDownload/: Program.cs
CSClienttest0723/: Program.cs
CSClienttest0822/: Program.cs
CSClienttest2207/: Program.cs
CSCltest2UploadBigListOnebyOne/: Program.cs
CSCnewUploadJointsOnebyOne/: Program.cs
CSCsplitFCUdataintoBigList/: Program.cs
CSCtestUploadListObebyOne/: Program.cs
Franka/: bottle.usd  franka_zy.usd  frankafromurfd0409.usd  myJoghurt_ziyu.usd  myjoghurtwithoutfranka.usd  myjoghurtziyu.usd
analogread/: analogread.ino
digitalread/: digitalread.ino
plot/: bottleplacing_delay.cpp  csc.csv  cscdelay.csv  csclient.csv  omndelay.csv  omniverse.csv  plot.py  plotMQTT.py  (+3 more)
robotControlProgram/: CMakeLists.txt  README.md
robotControlProgram/src/: as_graspout.cpp  bottleplacing.cpp  bottleplacing_control.cpp  echo_robot_state.cpp  qcontrol.cpp
(+51 files in other folders)
